--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,10 +14,12 @@
           <a href="/">The Tech Blog</a>
         </h1>
         <nav>
-          <button id="logout" class="btn-no-style">logout</button>
-          <a href="/login">login</a>
+          {{#if loggedIn}}
+            <button id="logout" class="btn-no-style">logout</button>
+          {{else}}
+            <a href="/login">login</a>
+          {{/if}}
         </nav>
-
       </header>
       <main>
         {{{body}}}
@@ -26,7 +28,9 @@
         Thanks for visiting!
       </footer>
     </div>
-  <script src="/javascript/logout.js"></script>
-</body>
+{{#if loggedIn}}
+<script src="/javascript/logout.js"></script>
+{{/if}}
+  </body>
 
 </html>
