--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,10 +11,11 @@
     <div class="wrapper">
       <header>
         <h1>
-          <a href="/">The Tech Blog</a>
+          <a>The Tech Blog</a>
         </h1>
         <nav>
           {{#if loggedIn}}
+          <a href="/"> Home</a>
             <a href="/dashboard">dashboard</a>
             <button id="logout" class="btn-no-style">logout</button>
           {{else}}
