--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,18 +10,20 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>
-          <a>The Tech Blog</a>
-        </h1>
         <nav>
           {{#if loggedIn}}
-          <a href="/"> Home</a>
-            <a href="/dashboard">dashboard</a>
-            <button id="logout" class="btn-no-style">logout</button>
+            <a href="/" > Home</a>
+            <a href="/dashboard">Dashboard</a>
+            <button id="logout" class="btn-no-style">Logout</button>
           {{else}}
             <a href="/login">login</a>
           {{/if}}
         </nav>
+
+        <h1>
+          The Tech Blog
+        </h1>
+
       </header>
       <main>
         {{{body}}}
