--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,6 +40,15 @@ header nav a {
  text-decoration: none;
 }
 
+#logout{
+  border: none;
+  background: none;
+  color: var(--primary);
+  font-weight: lighter;
+  padding: 15px 15px;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px; 
+}
 h1 {
   font-size: 3rem;
   background-color: var(--primary);
@@ -54,7 +63,9 @@ main {
   width: 94%;
 }
 
-
+#logout {
+  text-decoration: none;
+}
 /* 
 .btn {
   font-size: 1.3rem;
