--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -28,6 +28,9 @@
   </div>
 </form>
 
+{{> comments post.comments}}
+
+
 <script src="/javascript/edit-post.js"></script>
 <script src="/javascript/delete-post.js"></script>
 <script src="/javascript/comment.js"></script>
