--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,4 +1,4 @@
-<article class="card mb-6">
+{{!-- <article class="card mb-6">
 <div class="title">
   <a href="{{post_url}}" target="_blank">{{title}}</a>
   <span>({{format_url post_url}})</span>
@@ -8,4 +8,17 @@
     |
    <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
 </div>
+</article> --}}
+
+
+<article class="post">
+  <div class="title">
+    <a href="{{post_url}}" target="_blank">{{title}}</a>
+    <span>({{format_url post_url}})</span>
+  </div>
+  <div class="meta">
+  by {{user.username}} on {{format_date created_at}}
+    |
+    <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+  </div>
 </article>
