--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,7 +49,9 @@ header nav a {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 16px; 
 }
-h1 {
+
+.tech {
+  text-decoration: none;
   font-size: 3rem;
   background-color: var(--primary);
   color: var(--dark);
@@ -57,6 +59,7 @@ h1 {
   display: inline-block;
   border-radius: var(--border-radius);
   box-shadow: 6px 5px var(--light-dark);
+  text-decoration: none;
 }
 main {
   margin: 20px auto;
