--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,4 +1,17 @@
-  {{> post-info post }}
+
+<article class="post">
+  <div class="title">
+    <a href="{{post.post_url}}" target="_blank">{{post.title}}</a>
+    <span>({{post.post_url}})</span>
+  </div>
+  <div class="meta">
+   Posted by {{post.user.username}} on
+    {{post.created_at}}
+    |
+    <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
+  </div>
+</article>
+
 
 {{#if loggedIn}}
 <form class="comment-form">
@@ -8,6 +21,7 @@
 
   <div>
     <button type="submit">add comment</button>
+    <button type="button" class="upvote-btn">upvote</button>
   </div>
 </form>
 {{/if}}
