--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,30 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Tech Blog</title>
+     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
-  <body>
+  <body class="flex-column min-100-vh"></body>
     <div class="wrapper">
-      <header>
+      <header class="hero">
 
         <nav>
           <a href="/"> Home</a>
-          {{#if loggedIn}}
             <a href="/dashboard">Dashboard</a>
+          {{#if loggedIn}}
             <button id="logout" class="btn-no-style">Logout</button>
+           
           {{else}}
-            <a href="/login">login</a>
+            <a href="/login">Login</a>
           {{/if}}
+         
         </nav>
 
         <h1>
-          <a href="/" class="tech">  The Tech Blog</a>
+        
+          {{#if loggedIn}}
+           <a href="/" class="tech">  Your Dashboard</a>
+           {{else}}
+             <a href="/" class="tech">  The Tech Blog</a>
+            {{/if}}
+
         </h1>
 
       </header>
-      <main>
+    
+         <main >
+     
         {{{body}}}
+      </div>
       </main>
 
       <footer>
