--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,6 @@
 <form class="login-form">
   <div>
+    <h3 class="login-header">Login</h3>
     <label for="username-login">username:</label>
     <input type="text" id="username-login" />
   </div>
@@ -9,10 +10,14 @@
   </div>
   <div>
     <button type="submit" class="login-btn">login</button>
+   
   </div>
+  
 </form>
-
-<form class="signup-form">
+  <a href="/"> 
+    <button type="submit" class="login-btn">Sign-up Instead</button>
+    </a>
+{{!-- <form class="signup-form">
   <div>
     <label for="username-signup">username:</label>
     <input type="text" id="username-signup" />
@@ -24,5 +29,5 @@
   <div>
     <button type="submit">signup</button>
   </div>
-</form>
+</form> --}}
 <script src="/javascript/login.js"></script>
