--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,11 +1,22 @@
 <article class="post">
- <div class="title">
-  <a href="{{post_url}}" target="_blank">{{title}}</a>
-  <span>({{format_url post_url}})</span>
-</div>
-  <div class="meta">
-    Posted by {{user.username}} on {{format_date created_at}}
-    |
-   <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+  <div class="title">
+    <a href="/post/{{id}}" target="_blank">{{title}}</a>
+    {{!-- <span>({{format_url post_url}})</span> --}}
   </div>
-</article>
+  <div class="meta">
+    Posted by
+    {{user.username}}
+    on
+    {{format_date created_at}}
+    | 
+ 
+  
+    {{!-- <a href="/post/{{id}}">{{comments.length}}
+      {{format_plural "comment" comments.length}}</a> --}}
+  </div>
+   <p class="homepage-text">Lorem ipsum dolor sit amet consectetur, adipisicing
+      elit. Blanditiis exercitationem error quaerat tempore impedit sit, eius
+      eligendi, veniam ullam eaque debitis quis nihil iusto ex. Voluptatem
+      nesciunt iusto eligendi quia.</p>
+
+</article> 
