--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,31 @@
+
 <form class="login-form">
   <div>
     <h3 class="login-header">Login</h3>
-    <label for="username-login">username:</label>
+    <label for="username-login">Username:</label>
     <input type="text" id="username-login" />
   </div>
   <div>
-    <label for="password-login">password:</label>
+    <label for="password-login">Password:</label>
     <input type="password" id="password-login" />
   </div>
   <div>
-    <button type="submit" class="login-btn">login</button>
-   
+    <button type="submit" class="login-btn">Login</button>
   </div>
-  
 </form>
-  <a href="/"> 
-    <button type="submit" class="login-btn">Sign-up Instead</button>
-    </a>
-{{!-- <form class="signup-form">
+
+<form class="signup-form">
   <div>
-    <label for="username-signup">username:</label>
+    <h3 class="singup-header">Sign Up</h3>
+    <label for="username-signup">Username:</label>
     <input type="text" id="username-signup" />
   </div>
   <div>
-    <label for="password-signup">password:</label>
+    <label for="password-signup">Password:</label>
     <input type="password" id="password-signup" />
   </div>
   <div>
-    <button type="submit">signup</button>
+    <button type="submit">Signup</button>
   </div>
-</form> --}}
+</form>
 <script src="/javascript/login.js"></script>
