--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,11 +1,11 @@
-<div class="comments">
+<div class="thoughts">
   {{#each this}}
-  <section class="comment">
+  <section class="thought">
     <div class="meta">
       {{user.username}} on {{format_date created_at}}
     </div>
     <div class="text">
-      {{comment_text}}
+      {{thought_text}}
     </div>
   </section>
   {{/each}}
