--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
     <label for="password-login">Password:</label>
     <input type="password" id="password-login" />
   </div>
-  <div>
+  <div class="btn">
     <button type="submit" class="login-btn">Login</button>
   </div>
 </form>
@@ -24,7 +24,7 @@
     <label for="password-signup">Password:</label>
     <input type="password" id="password-signup" />
   </div>
-  <div>
+  <div class="btn">
     <button type="submit">Signup</button>
   </div>
 </form>
