--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,8 @@
 :root {
-  --primary: #ccdad1;
+  --primary: #ccdad5;
   --tertiary: #788585;
   --light-dark: #6f6866;
-  --dark: #271510;
+  --dark: #000000;
   --border-radius: 0.3rem;
 }
 
@@ -19,7 +19,9 @@ body {
   line-height: 1.5;
   font-size: 16px;
 }
-
+h2{
+  text-align: center;
+}
 .hero {
   display: block;
   background-color: var(--dark);
@@ -41,15 +43,15 @@ a {
   line-height: 1.25;
 }
 
- header nav a {
+header nav a {
   color: var(--primary);
   font-weight: lighter;
   padding: 15px 25px;
   text-decoration: none;
 }
-
- #logout {
-align-content: flex-end;
+ 
+#logout {
+  align-content: flex-end;
   border: none;
   background: none;
   color: var(--primary);
@@ -57,47 +59,68 @@ align-content: flex-end;
   text-decoration: none;
 } 
 
+.post {
+  text-align: center;
+  font-size: 18px;
+  /* width: 60%; */
+  /* margin-left: 20vw;
+  height: 30vh; */
+  border-style: solid;
+  border-width: 8px;
+  padding: 10px;
+  display: block;
+  block-size: fit-content;
+}
+
 main {
   margin: 20px auto;
   width: 94%;
 }
-label {
-  font-size: 1.1rem;
-  margin: 0 0 0 5px;
+/*Home handlebars styling*/
+.post-list {
+
 }
+
 button {
-  font-size: 1.3rem;
-  text-decoration: none;
-  padding: 6px 5px;
-  width: 100%;
-  display: block;
+  background-color: var(--light-dark);
+  padding: 5px 30px;
   margin: 5px 10;
+  font-size: 1rem;
   border-radius: var(--border-radius);
   color: var(--primary);
-  border: none;
-  outline: none;
-  background-color: var(--light-dark);
+
   box-shadow: 3px 3px var(--dark);
-  transform: translate(-1px, -1px);
 }
+
 input {
-  /* align-items: center; */
-  width: 100%;
+  width: 90%;
   padding: 1%;
-  margin: 5px 0;
+  margin: 5px 5px;
   font-size: 1.2rem;
   border: 2px solid var(--light-dark);
 }
 
 form {
-text-align: center;
-  border: 3px solid var(--dark);
+  text-align: center;
+  font-size: 18px;
+  margin-top: 5vw;
+  width: 60%;
+  margin-left: 20vw;
+  height: 30vh;
+  border-style: solid;
+  border-width: 8px;
+  padding: 10px;
+  display: block;
+  block-size: fit-content;
 }
 
-.login-header, .singup-header{
+.login-header,
+.singup-header {
+  text-align: center;
   color: var(--primary);
   background-color: var(--dark);
 }
+
 .title,
 .meta {
   flex-wrap: wrap;
@@ -108,6 +131,28 @@ text-align: center;
 
 .title a {
   color: var(--secondary);
+}
+/* edit post*/
+textarea {
+  width: 100%;
+  height: 100px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+}
+
+/*Footer */
+footer {
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  z-index: 1;
+  width: 100%;
+  text-align: center;
+  text-decoration: none;
 }
 
 /* FLEX CONTENT */
