--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,15 +1,16 @@
 <article class="post">
   <div class="title">
-    <a href="/post/{{id}}" target="_blank">{{title}}</a>
+    <a href="/posts/{{id}}" target="_blank">{{title}}</a>
   </div>
   <div class="meta">
     Posted by
     {{user.username}}
     on
     {{format_date created_at}}
-    | 
+  
 
   </div>
+   {{thought_text}}
    <p class="homepage-text">Lorem ipsum dolor sit amet consectetur, adipisicing
       elit. Blanditiis exercitationem error quaerat tempore impedit sit, eius
       eligendi, veniam ullam eaque debitis quis nihil iusto ex. Voluptatem
