--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,6 @@
 <article class="post">
   <div class="title">
-    <a href="/posts/{{id}}" target="_blank">{{title}}</a>
+    <a href="/post/{{id}}" target="_blank">{{title}}</a>
   </div>
   <div class="meta">
     Posted by
@@ -10,7 +10,7 @@
   
 
   </div>
-   {{thought_text}}
+   {{!-- {{thought_text}} --}}
    <p class="homepage-text">Lorem ipsum dolor sit amet consectetur, adipisicing
       elit. Blanditiis exercitationem error quaerat tempore impedit sit, eius
       eligendi, veniam ullam eaque debitis quis nihil iusto ex. Voluptatem
