--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,7 +21,7 @@
   <h2>Your Posts</h2>
   <ol>
     {{#each posts as |post|}}
-    <li>
+    <li class="list">
       {{> post-info post}}
       <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
     </li>
