renamed edit podt- to meet acceptance criteria

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -23,7 +23,7 @@
     {{#each posts as |post|}}
     <li class="list">
       {{> post-info post}}
-      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+      <a href="/dashboard/update/{{post.id}}" class="update-link">Update post</a>
     </li>
     {{/each}}
   </ol>
