--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,10 @@
 * {
   box-sizing: border-box;
 }
-
+main {
+  margin: 20px auto;
+  width: 94%;
+}
 body {
   margin: 0;
   padding: 0;
@@ -19,13 +22,17 @@ body {
   line-height: 1.5;
   font-size: 16px;
 }
-h2{
-  text-align: center;
-}
-.hero {
-  display: block;
+
+header {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
   background-color: var(--dark);
   padding: 3% 4%;
+}
+
+h2{
+  text-align: center;
 }
 .tech {
   text-decoration: none;
@@ -33,9 +40,16 @@ h2{
   background-color: var(--primary);
   color: var(--dark);
   padding: 0 10px;
-  display: inline-block;
   border-radius: var(--border-radius);
   box-shadow: 6px 5px var(--light-dark);
+}
+
+
+header nav a, #logout {
+  color: var(--primary);
+  font-weight: lighter;
+  padding: 10px 25px;
+  text-decoration: none;
 }
 a {
   font-weight: 700;
@@ -43,45 +57,28 @@ a {
   line-height: 1.25;
 }
 
-header nav a {
-  color: var(--primary);
-  font-weight: lighter;
-  padding: 15px 25px;
-  text-decoration: none;
-}
+
 .list {
   text-decoration: none;
 }
-#logout {
-  align-content: flex-end;
-  border: none;
-  background: none;
-  color: var(--primary);
-  font-weight: lighter;
-  text-decoration: none;
-} 
+
 
 .post {
-  text-align: center;
+  /* text-align: center; */
   font-size: 18px;
-  /* width: 60%; */
-  /* margin-left: 20vw;
-  height: 30vh; */
   border-style: solid;
   border-width: 8px;
   padding: 10px;
   display: block;
   block-size: fit-content;
 }
+ .posts {
+  margin-bottom: 5vw;
+  color: red;
+ }
 
-main {
-  margin: 20px auto;
-  width: 94%;
-}
 /*Home handlebars styling*/
-/* .post-list {
 
-} */
 
 button {
   background-color: var(--light-dark);
@@ -134,7 +131,7 @@ form {
 .title a {
   color: var(--secondary);
 }
-/* edit post*/
+/* update post*/
 textarea {
   width: 100%;
   height: 100px;
