--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -3,10 +3,15 @@
     <a href="/post/{{id}}" target="_blank">{{title}}</a>
   </div>
   <div class="meta">
+   <span>
+     
+    </span> 
     Posted by
+  
     {{user.username}}
     on
     {{format_date created_at}}
+    
   </div>
 
 </article> 
