--- a/views/update-post.handlebars
+++ b/views/update-post.handlebars
@@ -1,9 +1,9 @@
 <article>
   <a href="/dashboard"> &larr; Back to dashboard</a>
   <h2>
-    Edit Post
+   Update Post
   </h2>
-  <form class="edit-post-form">
+  <form class="update-post-form">
     <div>
       <input name="post-title" type="text" value="{{post.title}}" />
       <span>({{format_url post.post_url}})</span>
@@ -30,6 +30,6 @@
 
 {{> thoughts post.thoughts}}
 
-<script src="/javascript/edit-post.js"></script>
+<script src="/javascript/update-post.js"></script>
 <script src="/javascript/delete-post.js"></script>
 <script src="/javascript/thought.js"></script>
