--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,15 +7,12 @@
 }
 
 * {
-  box-sizing: border-box;
-}
-main {
-  margin: 20px auto;
-  width: 94%;
-}
-body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   background-color: var(--primary);
   font-family: "IBM Plex Sans", sans-serif;
   color: var(--dark);
@@ -30,10 +27,13 @@ header {
   background-color: var(--dark);
   padding: 3% 4%;
 }
-
-h2{
+/*Home handlebars styling*/
+h2,
+h3 {
+  font-size: 20px;
   text-align: center;
 }
+
 .tech {
   text-decoration: none;
   font-size: 3rem;
@@ -44,41 +44,43 @@ h2{
   box-shadow: 6px 5px var(--light-dark);
 }
 
-
-header nav a, #logout {
+header nav a,
+#logout {
+  font-size: 15px;
   color: var(--primary);
   font-weight: lighter;
-  padding: 10px 25px;
-  text-decoration: none;
-}
-a {
-  font-weight: 700;
-  margin: 0;
-  line-height: 1.25;
-}
-
-
-.list {
+  padding: 10px 20px;
   text-decoration: none;
 }
 
+.title {
+  padding: 10px 10px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 
-.post {
-  /* text-align: center; */
-  font-size: 18px;
+.thought {
+
+}
+.title a {
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--dark);
+}
+
+.meta {
+  font-size: 12px;
+  justify-content: flex-end;
+}
+
+.posts {
+  margin: 15px 10px 20px 15px;
   border-style: solid;
-  border-width: 8px;
-  padding: 10px;
-  display: block;
+  border-width: 6px;
+  padding-bottom: 20px;
   block-size: fit-content;
 }
- .posts {
-  margin-bottom: 5vw;
-  color: red;
- }
-
-/*Home handlebars styling*/
-
 
 button {
   background-color: var(--light-dark);
@@ -87,10 +89,34 @@ button {
   font-size: 1rem;
   border-radius: var(--border-radius);
   color: var(--primary);
-
   box-shadow: 3px 3px var(--dark);
 }
 
+.link {
+  margin-left: 43.5vw;
+  padding: 5px 20px;
+  text-decoration: none;
+  font-size: 1rem;
+  border-radius: var(--border-radius);
+  color: var(--primary);
+  background-color: var(--light-dark);
+  box-shadow: 3px 3px var(--dark);
+}
+.thought-link {
+  padding: 5px 10px;
+  text-decoration: none;
+  font-size: 1rem;
+  color: var(--dark);
+}
+.dash-link {
+  margin: 0 0 0 20px;
+  text-decoration: none;
+  font-size: 20px;
+  text-decoration: none;
+  color: var(--dark);
+}
+
+/* Login/signup styles */
 input {
   width: 90%;
   padding: 1%;
@@ -112,7 +138,24 @@ form {
   display: block;
   block-size: fit-content;
 }
+.thoughts {
+  font-size: 15px;
+}
+.thought {
+  text-align: center;
+  font-size: 20px;
+  width: 60%;
+  margin-left: 20vw;
+  height: 30vh;
+  border-style: solid;
+  border-width: 6px;
+  padding: 15px;
+  block-size: fit-content;
+}
 
+.thought-text {
+  font-size: 20px;
+}
 .login-header,
 .singup-header {
   text-align: center;
@@ -120,17 +163,6 @@ form {
   background-color: var(--dark);
 }
 
-.title,
-.meta {
-  flex-wrap: wrap;
-  padding: 0.5%;
-  color: var(--primary);
-  background-color: var(--dark);
-}
-
-.title a {
-  color: var(--secondary);
-}
 /* update post*/
 textarea {
   width: 100%;
