--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,17 +1,15 @@
-<article class="post">
+<article class="posts">
   <div class="title">
     <a href="/post/{{id}}" target="_blank">{{title}}</a>
-  </div>
-  <div class="meta">
-   <span>
-     
-    </span> 
-    Posted by
-  
-    {{user.username}}
-    on
-    {{format_date created_at}}
-    
+    <span class="meta">
+
+      Posted by
+
+      {{user.username}}
+      on
+      {{format_date created_at}}
+    </span>
   </div>
 
-</article> 
+
+</article>
