--- a/views/update-post.handlebars
+++ b/views/update-post.handlebars
@@ -1,5 +1,5 @@
 <article>
-  <a href="/dashboard"> &larr; Back to dashboard</a>
+  <a href="/dashboard" class="dash-link"> &larr; Dashboard</a>
   <h2>
    Update Post
   </h2>
@@ -10,8 +10,7 @@
     </div>
     <div>
      Posted by you on {{format_date post.created_at}}
-      |
-      <a href="/post/{{post.id}}">{{post.thoughts.length}} {{format_plural "thought" post.thoughts.length}}</a>
+      <a href="/post/{{post.id}}" class="thought-link">{{post.thoughts.length}} {{format_plural "thought" post.thoughts.length}}</a>
     </div>
     <button type="submit">Save post</button>
     <button type="button" class="delete-post-btn">Delete post</button>
