--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,15 +28,22 @@ header {
   padding: 3% 4%;
 }
 /*Home handlebars styling*/
+
+h4{
+  font-size: 25px;
+  margin: 30px 0 0 30px;
+}
+
 h2,
 h3 {
   font-size: 20px;
   text-align: center;
+  margin-top: 3vw;
 }
 
 .tech {
   text-decoration: none;
-  font-size: 3rem;
+  font-size: 3.5rem;
   background-color: var(--primary);
   color: var(--dark);
   padding: 0 10px;
@@ -60,9 +67,6 @@ header nav a,
   flex-wrap: wrap;
 }
 
-.thought {
-
-}
 .title a {
   font-size: 20px;
   font-weight: bold;
@@ -128,7 +132,7 @@ input {
 form {
   text-align: center;
   font-size: 18px;
-  margin-top: 5vw;
+  margin-top: 2vw;
   width: 60%;
   margin-left: 20vw;
   height: 30vh;
