--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,7 +1,7 @@
  <h2>Add thoughts to this post</h2>
 {{> post-info post}}
  
-
+  <h3> Thoughts about this post</h3>
 {{> thoughts post.thoughts}}
 
 {{#if loggedIn}}
